# growth-too-marshal

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  .yarnrc  Dockerfile  Dockerfile.test  LICENSE.rst  MANIFEST.in  README.md  README.rst  docker-compose.test.yml  docker-compose.yml  docs-requirements.txt  package.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: pull_request_template.md
.github/workflows/: tests.yml
docker/: Dockerfile  Dockerfile.tunnel  README.md  application.cfg  entrypoint.sh  known_hosts  nginx.conf
docker/etc/nginx/conf.d/: default.conf
docs/: conf.py  configuration.rst  contributing.rst  deployment.rst  index.rst  install.rst  running.rst
growth/too/: __init__.py  _version.py  catalogs.py  decam_db.py  flask.py  gcn.py  growthdb.py  jinja.py  models.py  tool.py  twilio.py  views.py
growth/too/catalog/: CLU.hdf5
growth/too/config/: DECam.config  GROWTH-India.config  Gattini.config  KPED.config  ZTF.config
growth/too/input/: GROWTH-India.tess  KPED.tess  ZTF.ref
growth/too/static/: LICENSE.txt  common.css  markdown-table.min.js  skymap.css  skymap.js
growth/too/tasks/: __init__.py  decam_client.py  email.py  gattini_client.py  growthdb_cgi.py  obs.py  ref.py  scheduler.py  skymaps.py  slack.py  tiles.py  treasuremap.py  twilio.py  ztf_client.py
growth/too/templates/: about.html  base.html  candidates.jinja2  comment.html  delete_too.email  event.html  event_header.html  event_new.email  event_new_text.txt  event_new_voice.txt  forms.html  galaxies.html  galaxy.html  gcn.jinga2  gcn.jinja2  health.html  index.html  localization.html  login.html  macros.jinja2  multiple_events.html  nav_bar.html  objects.html  observation_new.html  observations.html  plan.html  plan_manual.html  plan_new.html  quadrants.html  queue.html  too.email  user.html  user_test.txt
growth/too/tests/: __init__.py  conftest.py  test_decam_client.py  test_gattini_client.py  test_gcn.py  test_growthdb_cgi.py  test_gw.py  test_obs.py  test_ref.py  test_test.py  test_twilio.py  test_ztf_client.py
growth/too/tests/data/: AMON_150529.xml  AMON_151115.xml  AMON_ICECUBE_BRONZE_190819.xml  AMON_ICECUBE_GOLD_190730.xml  GRB180116A_Fermi_GBM_Alert.xml  GRB180116A_Fermi_GBM_Fin_Pos.xml  GRB180116A_Fermi_GBM_Flt_Pos.xml  GRB180422.913_Subthreshold.xml  MS181101ab-1-Preliminary.xml  MS181101ab-4-Retraction.xml  gbm_subthresh_546126856.048000_healpix.fits  glg_healpix_all_bn180116026.fit
