[aliases]
test=pytest

[coverage:run]
source = growth
omit = growth/too/tests/*
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = growth-too-marshal
license = MIT
author = Leo Singer
author_email = leo.p.singer@nasa.gov
description = GROWTH Target of Opportunity Marshal
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:

[options.entry_points]
console_scripts =
    growth-too = growth.too.tool:main

[options.package_data]
growth.too =
    catalog/*.hdf5
    config/*.config
    input/*.tess
    input/*.ref
    tiling/*.dat
    static/*.css
    static/*.js
    templates/*.html
    templates/*.txt
    templates/*.email
    templates/*.jinja2
    tests/data/*.dat
    tests/data/*.fit
    tests/data/*.fits
    tests/data/*.xml

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
versionfile_build = growth/too/_version.py
versionfile_source = growth/too/_version.py
tag_prefix = v
parentdir_prefix = growth-too-marshal-
